--- a/public/pages/performer.html
+++ b/public/pages/performer.html
@@ -128,6 +128,35 @@
                     <p class="subtitle">Senza il cazzo di qualcun altro dentro</p>
                 </blockquote>
             </div>
+
+            <div id="slider-container" class="container">
+                <div id="slider" class="carousel slide">
+                    <ol class="carousel-indicators">
+                        <li data-target="#slider" data-slide-to="0" class="active"></li>
+                        <li data-target="#slider" data-slide-to="1"></li>
+                        <li data-target="#slider" data-slide-to="2"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="../assets/images/chicago.jpg" alt="First slide">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="../assets/images/la.jpg" alt="Second slide">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="../assets/images/ny.jpg" alt="Third slide">
+                        </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#slider" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#slider" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
+            </div>
         </div>
 
         <div class="row">
