node js server, jwt authentication
:)

--- a/public/pages/performer.html
+++ b/public/pages/performer.html
@@ -34,7 +34,7 @@
         <div id="navbar-list" class="collapse navbar-collapse">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link active" href="#">Home</a>
+                    <a class="nav-link active" href="/">Home</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle wheat-item wheat-link" href="#" role="button"
