--- a/public/pages/home.html
+++ b/public/pages/home.html
@@ -33,7 +33,7 @@
         <div id="navbar-list" class="collapse navbar-collapse">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link active" href="#">Home</a>
+                    <a class="nav-link active" href="/">Home</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle wheat-item wheat-link" href="#" role="button"
@@ -41,16 +41,16 @@
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="#">Events</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Performers</a>
+                        <a class="dropdown-item" href="pages/performer.html">Performers</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="#">Seminars</a>
                     </div>
-                </li>
+                </li>\
                 <li class="nav-item">
                     <a class="nav-link wheat-item wheat-link" href="#">Events</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link wheat-item wheat-link" href="#">Performers</a>
+                    <a class="nav-link wheat-item wheat-link" href="pages/performer.html">Performers</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link wheat-item wheat-link" href="#">Seminars</a>
