--- a/doc.html
+++ b/doc.html
@@ -76,16 +76,16 @@ address</a>.</li>
 <li>Deliverable D4: the source code of D0 is available as a zip file at
 <a href="http://localhost:3000/backend/app.zip">this address</a>.</li>
 <li>Deliverable D5: the address of the online source control repository
-is available <a href="https://github.com/f-cazzola/hypermedia-2019-alterio-antichi-cazzola">this address</a>. We hereby
-declare that this is a private repository and, upon request, we will
-give access to the instructors.</li>
+is available <a href="https://github.com/f-cazzola/hypermedia-2019-alterio-antichi-cazzola">this address</a>. We hereby declare that this is a private repository and, upon request, we will give access to the instructors.</li>
 </ul>
 <h2 id="specification">Specification</h2>
 <h3 id="web-architecture">Web Architecture</h3>
-<p>Describe here, with a diagram, the components of your web application
-and how they interact. Highlight which parts belong to the application
-layer, data layer or presentation layer. How did you ensure that HTML is
-not rendered server side?</p>
+<h4 id="web-architecture-schema-1">Web Architecture Schema 1</h4>
+<p><img src="http://localhost:3000/images/doc/web-arc.png" alt="Web Architecture Schema 1"></p>
+<h4 id="web-architecture-schema-2">Web Architecture Schema 2</h4>
+<p><img src="http://localhost:3000/images/doc/web-arc-2.png" alt="Web Architecture Schema 2"></p>
+<p>We render the pages JUST for include piece of html commun in all pages like the navbar or footer. With rendering we avoided any inconsistency with the navbar in all pages.
+We are sure the dynamic data is NEVER rendered by the server beacause we never access the model classes anywhere but in the API logic (in the API folder)</p>
 <h3 id="api">API</h3>
 <h4 id="rest-compliance">REST compliance</h4>
 <p><em>Describe here to what extent did you follow REST principles and what are
@@ -124,22 +124,10 @@ backend of the application.</p>
 <li>swagger-ui-express: to provide the a UI to the OpenAPI specification</li>
 </ul>
 <h3 id="discussion">Discussion</h3>
-<p>Describe here:</p>
 <ul>
-<li><em>How did you make sure your web application adheres to the provided
-OpenAPI specification? Which method did you use to test all APIs
-endpoints against the expected response?</em></li>
 <li>We extensevly tested all the API with the help of swaggerui</li>
-<li>Why do you think your web application adheres to common practices to
-partition a REST-based web application (static assets vs.
-application data)</li>
 <li>We crated API that are easy to understand and documented with OpenAPI specification, they accept and return only JSON object with the data, so that anyone can create either a web application, Android application or any other sort of application using the same API.</li>
-<li>Describe synthetically why and how did you manage session state,
-what are the state change triggering actions (e.g., POST to login
-etc..).</li>
 <li>We managed the authentication with JSON Web Token, returning the JWT when the POST API for login is called. Then this JWT need to be added in the header of the calls to the API that need authentication</li>
-<li>Which technology did you use (relational or a no-SQL database) for
-managing the data model?</li>
 <li>We used MySQL database mainly because we found more documentation about it then other type of relational database</li>
 </ul>
 <h2 id="other-information">Other information</h2>
