--- a/doc.html
+++ b/doc.html
@@ -40,7 +40,7 @@
 <tbody>
 <tr>
 <td>1</td>
-<td>Batman</td>
+<td>Administrator</td>
 <td>Federico</td>
 <td>Cazzola</td>
 <td>869738</td>
@@ -48,7 +48,7 @@
 </tr>
 <tr>
 <td>2</td>
-<td>ColourKid</td>
+<td>Member</td>
 <td>Clarance</td>
 <td>Antichi</td>
 <td>872878</td>
@@ -56,7 +56,7 @@
 </tr>
 <tr>
 <td>3</td>
-<td>WonderWoman</td>
+<td>Member</td>
 <td>Federico</td>
 <td>Alterio</td>
 <td>871432</td>
@@ -66,24 +66,23 @@
 </table>
 <h2 id="links-to-other-deliverables">Links to other deliverables</h2>
 <ul>
-<li>Deliverable D0: the web application is accessible at <a href="http://localhost:3000">this
+<li>Deliverable D0: the web application is accessible at <a href="https://festival-hypermedia.herokuapp.com">this
 address</a>.</li>
 <li>Deliverable D2: the JSON file containing the specification
-of the app API can be found at <a href="http://localhost:3000/backend/spec.yaml">this
-address</a>.</li>
+of the app API can be found at <a href="https://festival-hypermedia.herokuapp.com/backend/spec.yaml">this address</a>.</li>
 <li>Deliverable D3: the SwaggerUI page of the same API is available at
-<a href="http://localhost:3000/backend/swaggerui">this address</a>.</li>
+<a href="https://festival-hypermedia.herokuapp.com/backend/swaggerui">this address</a>.</li>
 <li>Deliverable D4: the source code of D0 is available as a zip file at
-<a href="http://localhost:3000/backend/app.zip">this address</a>.</li>
+<a href="https://festival-hypermedia.herokuapp.com/backend/app.zip">this address</a>.</li>
 <li>Deliverable D5: the address of the online source control repository
 is available <a href="https://github.com/f-cazzola/hypermedia-2019-alterio-antichi-cazzola">this address</a>. We hereby declare that this is a private repository and, upon request, we will give access to the instructors.</li>
 </ul>
 <h2 id="specification">Specification</h2>
 <h3 id="web-architecture">Web Architecture</h3>
 <h4 id="web-architecture-schema-1">Web Architecture Schema 1</h4>
-<p><img src="http://localhost:3000/images/doc/web-arc.png" alt="Web Architecture Schema 1"></p>
+<p><img src="https://festival-hypermedia.herokuapp.com/images/doc/web-arc.png" alt="Web Architecture Schema 1"></p>
 <h4 id="web-architecture-schema-2">Web Architecture Schema 2</h4>
-<p><img src="http://localhost:3000/images/doc/web-arc-2.png" alt="Web Architecture Schema 2"></p>
+<p><img src="https://festival-hypermedia.herokuapp.com/images/doc/web-arc-2.png" alt="Web Architecture Schema 2"></p>
 <p>We render the pages JUST for include piece of html commun in all pages like the navbar or footer. With rendering we avoided any inconsistency with the navbar in all pages.
 We are sure the dynamic data is NEVER rendered by the server beacause we never access the model classes anywhere but in the API logic (in the API folder)</p>
 <h3 id="api">API</h3>
@@ -106,7 +105,7 @@ resources.</em></p>
 <li>User</li>
 </ul>
 <h3 id="data-model">Data model</h3>
-<p><img src="http://localhost:3000/images/doc/ER-diagram.png" alt="ER diagram">
+<p><img src="https://festival-hypermedia.herokuapp.com/images/doc/ER-diagram.png" alt="ER diagram">
 All OpenAPI models have also an Entity in the ER diagram except for Reservation, which is represented in the diagram as a reletionship from User to Event</p>
 <h2 id="implementation">Implementation</h2>
 <h3 id="tools-used">Tools used</h3>
@@ -124,11 +123,12 @@ backend of the application.</p>
 <li>swagger-ui-express: to provide the a UI to the OpenAPI specification</li>
 </ul>
 <h3 id="discussion">Discussion</h3>
+<p>Describe here:</p>
 <ul>
-<li>We extensevly tested all the API with the help of swaggerui</li>
-<li>We crated API that are easy to understand and documented with OpenAPI specification, they accept and return only JSON object with the data, so that anyone can create either a web application, Android application or any other sort of application using the same API.</li>
+<li>We make sure our web application adheres to the provided OpenAPI specification thanks to SwaggerUi because we generete it from the OpenAPI spec file with swagger-ui-express and we used it to extensevly test all the API</li>
+<li>We think our web application adheres to common practices to partition a REST-based web application because we crated API that are easy to understand and documented with OpenAPI specification, they accept and return only JSON object with the data, so that anyone can create either a web application, Android application or any other sort of application using the same API.</li>
 <li>We managed the authentication with JSON Web Token, returning the JWT when the POST API for login is called. Then this JWT need to be added in the header of the calls to the API that need authentication</li>
-<li>We used MySQL database mainly because we found more documentation about it then other type of relational database</li>
+<li>For managing the data model we used MySQL database mainly because we found more documentation about it then other type of relational database</li>
 </ul>
 <h2 id="other-information">Other information</h2>
 <h3 id="task-assignment">Task assignment</h3>
